# aries-vlm-demo

./: README.md  clear-demo.desktop  docker-compose.gpu.yml  docker-compose.yml  run.sh  update.sh  vlm-demo.desktop
backend/: README.md  backend.Dockerfile  generation_config.json  prompt.txt  pyproject.toml
backend/src/: ImageTextToTextPipeline.py  server.py
frontend/: frontend.Dockerfile  images.tsx  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ActivablePanel.tsx  Answer.tsx  Chat.tsx  ChatInput.tsx  Dialog.tsx  ImageSelector.tsx  type.tsx
frontend/public/fonts/: Pretendard-Bold.eot  Pretendard-ExtraBold.eot  Pretendard-Medium.eot  Pretendard-Regular.eot  Pretendard-SemiBold.eot
